Completed the Shopping Cart - Complete Remodel Updating Cart works on all views Checkout Now updates the correct quantity on the database Re-modeled the entire website including better designs / less bootstrap Added fixed footer for demo purposes only on all screen views Checkout button no longer appears when no items are in the cart Images no longer stretch Added checkout modal on success after form validation/uploaded to DB that resets cart/state Remove from cart works and redesigned to look better

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,5 +1,24 @@
+body{
+    height: 100%;
+    padding-bottom: 70px;
+}
+
+#root {
+    background-image: url('/uploads/dust_scratches.png')
+}
+
 .header{
     height: 13vh;
+}
+
+.navbar {
+    position: relative;
+    z-index: 2;
+}
+
+.nav-header {
+    font-family: 'Racing Sans One', cursive;
+    font-size: 30px;
 }
 .cart{
     color: #ffffff;
@@ -16,9 +35,9 @@
     border-width: 1px;
     border-left: solid rgb(65, 206, 253) 30px;
 }
-.detailView{
+/* .detailView{
     margin-top: 60px;
-}
+} */
 .cartText{
     margin-top: 15px;
 }
@@ -26,22 +45,88 @@
     margin-top: 50px;
 }
 .card {
-    width: 18rem;
+    width: 100%;
+} 
+.card-footer {
+    padding: .75rem .5rem;
+}
+.card img {
+    height: 245px;
+    object-fit: cover;
 }
 .mainProducts{
     margin-top: 20px;
 }
 .mainProductButton{
-    margin-top: 10px;
-    margin-left:5%;
+    border-radius: 0px;
+    color: #ffffff;
+}
+
+.cartDeleteButton {
+    background: #ff4f4f;
+    color: #fff;
+    border-radius: 0px;
+}
+
+.blue {
+    background: #00b8ff;
+}
+
+.button-format {
+    border-radius: 0px;
+}
+
+.quantity-selector {
+    vertical-align: bottom;
+    width: 54px;
+    height: 38px;
+}
+
+.mainProductButton:nth-child(even){
+    background: #00b8ff;
+    margin-left: 7px;
+    margin-right: 7px;
+}
+
+.catalog-btn {
+    background: #00b8ff;
+    color: #fff;
+    border-radius: 0px;
+    margin-bottom: 75px;
+    position: relative;
+    z-index: 1;
+    animation: slideIn 300ms 200ms forwards;
+    top: -2.4em;
+}
+
+@keyframes slideIn {
+    0% {
+        top: -2.4em;
+    }
+    100% {
+        top: 0px;
+    }
+}
+
+.details-add-btn {
+    background: #00b8ff;
+    color: #fff;
+    border-radius: 0px;
+    margin-bottom: 55px;
+}
+
+.card-text-long {
+    padding-bottom: 50px;
+    padding-right: 15px;
 }
 
 .red {
     color: red;
 }
 
-.main-height {
-    height: 20vh;
+.cart-count {
+    font-family: 'Pacifico', cursive;
+    font-size: 25px;
 }
 
 .details {
@@ -50,8 +135,7 @@
 }
 
 .image-details {
-    height: 330px;
-    width: 540px;
+    height: 300px;
 }
 .placeOrder{
     width: 200px;
@@ -70,3 +154,16 @@
     margin-right: 8px
 }
 
+.footer {
+    background-color: #f5f5f5;
+}
+
+.modal-header {
+    background: #00b8ff;
+    color: #fff;
+    border-radius: 0px;
+}
+
+.modal-content {
+    border-radius: 0px;
+}
